--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -8,6 +8,21 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+.splide__pagination__page {
+  @apply size-2 !important;
+}
+.splide {
+  @apply pt-2 !important;
+}
+
+.splide__pagination__page.is-active {
+  @apply bg-main !important;
+}
+
+.splide__pagination__page:hover {
+  @apply bg-secondary scale-125 !important;
+}
+
 /* Webkit scrollbar styles */
 ::-webkit-scrollbar {
   width: 6px;
