--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -3,10 +3,12 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  font-family: "__Roboto_c0d5fb";
 }
+
+/* * {
+  outline: 1px solid red !important;
+} */
 
 .splide__pagination__page {
   @apply size-2 !important;
