--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -10,6 +10,44 @@
   outline: 1px solid red !important;
 } */
 
+.swiper-button-next,
+.swiper-button-prev {
+  color: #ff7003 !important;
+  width: 30px !important;
+  height: 30px !important;
+  background: #ff7003 !important;
+  border-radius: 50% !important;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
+}
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  font-size: 18px !important;
+  font-weight: 900 !important;
+  color: white !important;
+}
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  background: #e55400 !important;
+}
+.swiper-pagination {
+  margin-top: 15px !important;
+}
+.swiper-pagination-bullet {
+  width: 16px !important;
+  height: 16px !important;
+  text-align: center !important;
+  line-height: 16px !important;
+  font-size: 10px !important;
+  color: white !important;
+  opacity: 1 !important;
+  background: rgba(255, 112, 3, 0.5) !important;
+  border-radius: 50% !important;
+  margin: 0 4px !important;
+}
+.swiper-pagination-bullet-active {
+  background: #ff7003 !important;
+}
+
 a {
   @apply text-blue-500;
 }
